# dalal

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
dalal/: __init__.py  base.py  bse.py  constants.py  dalal.py  errors.py  nse.py  utils.py
tests/: test_base.py  test_bse.py  test_dalal.py  test_nse.py  test_utils.py
