[project]
name = "dalal"
version = "0.1.2"
description = "Unified Python API for Indian stock exchanges (NSE + BSE)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aman", email = "2000.aman.sinha@gmail.com" }]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://github.com/onlyoneaman/dalal"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dalal"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
