[project]
name = "dalal"
version = "0.1.3"
description = "Unified Python API for Indian stock exchanges (NSE + BSE)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Aman", email = "2000.aman.sinha@gmail.com" }]
keywords = [
    "nse",
    "bse",
    "india",
    "stocks",
    "market-data",
    "finance",
    "trading",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
]

[project.urls]
Homepage = "https://github.com/onlyoneaman/dalal"
Repository = "https://github.com/onlyoneaman/dalal"
Documentation = "https://github.com/onlyoneaman/dalal#readme"
Issues = "https://github.com/onlyoneaman/dalal/issues"
Changelog = "https://github.com/onlyoneaman/dalal/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dalal"]

[tool.hatch.build.targets.wheel.force-include]
"dalal/py.typed" = "dalal/py.typed"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
